[tool.poetry]
name = "flawcastr-public"
version = "0.1.0"
description = ""
authors = ["sonniebailey <sonnie.bailey@gmail.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
PyQt5 = "^5.15.11"
prettytable = "^3.10.2"
numpy = "^2.0.1"
pandas = "^2.2.2"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
